# load-balancer

./: .gitignore  Cargo.toml  README.md  launch-services.ps1
src/: balancing_algorithms.rs  least_connections.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  worker.rs
tests/load_balancer/: algorithms_test.rs  load_balancer.rs  load_balancer_test.rs  main.rs
